change model structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 split_project_dataset
 model.h5
 modelresnet50.h5
+newModel.h5
 *.png
 project_dataset
+small_project_dataset
+appCode/newModel.h5
+*.h5
